k8s/apps/base/pds/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pds
  namespace: pds
  labels:
    app: pds
spec:
  replicas: 1
  serviceName: pds
  selector:
    matchLabels:
      app: pds
  template:
    metadata:
      labels:
        app: pds
    spec:
      containers:
        - name: pds
          image: ghcr.io/bluesky-social/pds:0.4.5009
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 2583
          resources:
            requests:
              cpu: "100m"
              memory: 128Mi
            limits:
              cpu: "200m"
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /pds/data
            - name: blocks
              mountPath: /pds/blocks
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-homelab
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: blocks
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-homelab
        resources:
          requests:
            storage: 1Gi
