k8s/apps/base/pds/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pds
  namespace: pds
  labels:
    app: pds
spec:
  type: ClusterIP
  selector:
    app: pds
  ports:
    - name: http
      port: 2583
      targetPort: 2583
